--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
   "name": "js-template",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "i": "^0.3.7"
-  },
   "devDependencies": {
-    "eslint": "^8.10.0",
-    "eslint-config-airbnb-base": "^14.x",
+    "eslint": "^8.x",
+    "eslint-config-airbnb-base": "^15.x",
     "eslint-plugin-import": "^2.x",
+    "hint": "^6.x",
     "prettier": "^1.19.1",
-    "stylelint": "^13.x",
-    "stylelint-config-recommended": "^3.x",
-    "stylelint-config-standard": "^20.x",
+    "stylelint": "^14.x",
+    "stylelint-config-recommended": "^6.x",
+    "stylelint-config-standard": "^24.x",
     "stylelint-csstree-validator": "^1.x",
     "stylelint-scss": "^3.x"
   },
@@ -25,5 +23,10 @@
     "stylelint:check": "npx stylelint **/*.css",
     "eslint": "npx eslint . --fix",
     "eslint:check": "npx eslint ."
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ]
 }
