--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "build:watch": "npx webpack --watch",
     "build": "npx webpack --mode production",
     "dev": "webpack serve"
+  },
+  "dependencies": {
+    "webpack-remove-empty-scripts": "^0.8.0"
   }
 }
